# iridium_engine

./: .gitignore  Cargo.toml  Cranky.toml  FileIcon.xcf  README.md  UiDesign.xcf  flake.nix  notes.rs  test.json5
iridium_assets/: Cargo.toml
iridium_assets/src/: asset.rs  assets.rs  lib.rs
iridium_assets/tests/: assets_test.rs
iridium_collision/: Cargo.toml
iridium_collision/src/: aabb_collider.rs  lib.rs  rect.rs
iridium_core/: Cargo.toml
iridium_core/src/: assets.rs  input.rs  key_code.rs  lib.rs  log.rs  mouse_button.rs  project.rs  project_settings.rs
iridium_ecs/: Cargo.toml
iridium_ecs/benches/: hash_speed.rs
iridium_ecs/src/: component.rs  components.rs  entities.rs  entity.rs  lib.rs  system.rs  world.rs
iridium_ecs/src/components/: basic_components.rs  component.rs  component_box.rs  component_default.rs  component_info.rs  component_trait.rs  components.rs  field_ui.rs  mod.rs
iridium_ecs/src/storage/: component_storage.rs  mod.rs  reader.rs  writer.rs
iridium_ecs/src/systems/: mod.rs  system.rs  systems.rs  systems_stage.rs
iridium_ecs/src/ui/: field.rs  field_attrs.rs  inspector_ui.rs  mod.rs
iridium_ecs_macros/: Cargo.toml
iridium_ecs_macros/src/: lib.rs  system_helper.rs
iridium_editor/: Cargo.toml
iridium_editor/src/: app.rs  assets.rs  components.rs  frag.hlsl  frag_1.hlsl  frag_2.hlsl  frame_history.rs  main.rs  object.rs  play_state.rs  project.rs  shaders.rs  sprite.hlsl  systems.rs  uv_test.hlsl  vert.hlsl
iridium_editor/src/systems/: frame_history.rs  mod.rs  notes.txt
iridium_editor/src/ui/: egui_panel.rs  egui_state.rs  engine_ui.rs  mod.rs  panel_ui.rs  screen_rect.rs  ui_state.rs
iridium_editor/src/ui/panels/: asset_browser.rs  bottom_panel.rs  components_list.rs  entities_list.rs  mod.rs  top_panel.rs  viewport.rs
iridium_example_project/: Cargo.toml
iridium_example_project/assets/: Background.xcf  uv_test.hlsl
iridium_example_project/assets/FoodSprites/: readme.txt
iridium_example_project/scenes/: scene.json5
iridium_example_project/src/: assets.rs  collision.rs  components.rs  death.rs  flight.rs  flight_rotation.rs  gravity.rs  lib.rs  movement.rs  pipes.rs  systems.rs  velocity.rs  vert.hlsl
iridium_graphics/: Cargo.toml
iridium_graphics/src/: components.rs  lib.rs  material.rs  mesh.rs  shader.rs  systems.rs  texture.rs
iridium_map_utils/: Cargo.toml
iridium_map_utils/src/: lib.rs
iridium_map_utils/tests/: tests.rs
iridium_maths/: Cargo.toml
iridium_maths/src/: lib.rs  vec3.rs  vecn.rs
iridium_reflect/: Cargo.toml
iridium_reflect/src/: lib.rs  stable_type_id.rs
iridium_runtime/: Cargo.toml
iridium_runtime/src/: app.rs  main.rs  project.rs
src/: main.rs
src/ecs/: component.rs  components.rs  entities.rs  mod.rs  system.rs  systems.rs
