[workspace]

# This is usually implied by edition = "2021",
# but this doesn't seem to work in a workspace
resolver = "2"

members = [
    "iridium_assets",
    "iridium_collision",
    "iridium_core",
    "iridium_ecs",
    "iridium_ecs_macros",
    "iridium_editor",
    "iridium_graphics",
    "iridium_maths",
    "iridium_map_utils",
    "iridium_example_project"
]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2

