[package]
name = "iridium_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_maths = { path = "../iridium_maths" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_assets = { path = "../iridium_assets" }
iridium_map_utils = { path = "../iridium_map_utils" }

winit = "0.27"
egui = "0.19"
