[package]
name = "iridium_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_maths = { path = "../iridium_maths" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_assets = { path = "../iridium_assets" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_map_utils = { path = "../iridium_map_utils" }
iridium_reflect = { path = "../iridium_reflect" }

winit = "0.28"
egui = "0.21"
chrono = "0.4"
dlopen = "0.1"
dlopen_derive = "0.1"
wgpu = "0.15"
strum = "0.24"
strum_macros = "0.24"
