[package]
name = "iridium_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_map_utils = { path = "../iridium_map_utils" }
iridium_maths = { path = "../iridium_maths" }
hashbrown = "0.12.1"
uuid = { version = "1.0.0", features = ["fast-rng", "v4"] }
rayon = "1.5.3"
egui = "0.18.1"
