[package]
name = "iridium_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_map_utils = { path = "../iridium_map_utils" }
iridium_maths = { path = "../iridium_maths" }

egui = "0.18.1"
hashbrown = "0.12"
uuid = { version = "1.0", features = ["fast-rng", "v4"] }
rayon = "1.5"
puffin = "0.13"
