[package]
name = "iridium_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_maths = { path = "../iridium_maths" }
iridium_map_utils = { path = "../iridium_map_utils" }

winit = "0.26.1"
env_logger = "0.9.0"
wgpu = { version = "0.12.0", features = ["spirv"] }
tokio = { version = "1.18.2", features = ["full"] }
hashbrown = "0.12.1"
inline-spirv = "0.1.4"
