[package]
name = "iridium_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_core = { path = "../iridium_core" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_maths = { path = "../iridium_maths" }
iridium_map_utils = { path = "../iridium_map_utils" }

egui = "0.19.0"
egui-latest_wgpu_backend = "0.19.0"
# egui-latest_wgpu_backend = { path = "../../egui-latest_wgpu_backend" }
egui-winit = "0.19.0"

env_logger = "0.9"
wgpu = { version = "0.14", features = ["spirv"] }
pollster = "0.2"
dlopen = "0.1"
dlopen_derive = "0.1"
image = "0.24"
puffin = "0.13"
puffin_egui = "0.17"
