[package]
name = "iridium_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_core = { path = "../iridium_core" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_maths = { path = "../iridium_maths" }
iridium_map_utils = { path = "../iridium_map_utils" }

egui = "0.21"
egui-wgpu = "0.21"
egui-winit = { version = "0.21", features = ["puffin"] }

env_logger = "0.10"
wgpu = { version = "0.15", features = ["spirv"] }
pollster = "0.3"
image = "0.24"
puffin = "0.14"
puffin_egui = "0.20"
