[package]
name = "iridium_example_project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_collision = { path = "../iridium_collision" }
iridium_core = { path = "../iridium_core" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_maths = { path = "../iridium_maths" }
iridium_map_utils = { path = "../iridium_map_utils" }

egui = "0.19.0"
wgpu = "0.14"
rand = "0.8"
rayon = "1.6"
# For whatever reason manjaro's shaderc stopped working,
# so I can't rely on any of them,
# so it is built from source whether it's installed or not.
inline-spirv = { version = "0.1" }
