[package]
name = "iridium_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_ecs_macros = { path = "../iridium_ecs_macros" }
iridium_maths = { path = "../iridium_maths" }
iridium_map_utils = { path = "../iridium_map_utils" }

egui = "0.19.0"
hashbrown = "0.12"
wgpu = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
puffin = "0.13"
