[package]
name = "iridium_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iridium_assets = { path = "../iridium_assets" }
iridium_ecs = { path = "../iridium_ecs" }
iridium_core = { path = "../iridium_core" }
iridium_graphics = { path = "../iridium_graphics" }
iridium_maths = { path = "../iridium_maths" }

wgpu = "0.14"
winit = "0.27"
pollster = "0.2"
